# EnsembleKit

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/scripts/: push_wiki.py
.github/workflows/: ci.yml  wiki-init.yml
docs/: ARCHITECTURE.md  DECISIONS.md
ensemblekit/: __init__.py  cli.py  combiners.py  config.py  learners.py  metrics.py  runner.py  sklearn_check.py  types.py
evals/: RESULTS.md  gate.py  harness.py  metrics.py
examples/: run_combine.py
tests/: conftest.py  test_cli.py  test_combiners.py  test_config.py  test_dissociation.py  test_gate.py  test_learners.py  test_metrics.py  test_runner.py  test_sklearn_check.py
